# KoreDjango

./: .dockerignore  .flake8  Dockerfile  README.MD  catalog_fixture.json  docker-compose.yml  env.exemple  groups.json  pyproject.toml  utils.py
.github/workflows/: ci.yml
blogs/: admin.py  forms.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_alter_blog_views.py  0003_alter_blog_views.py  0004_blog_viewed_100_times.py
blogs/templates/blogs/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_home.html  blog_list.html  footer.html  header.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_contacts.py  0003_alter_contacts_options_alter_contacts_inn.py  0004_alter_product_price_alter_product_product_image.py  0005_customerdata.py  0006_alter_customerdata_phone.py  0007_alter_customerdata_phone.py  0008_alter_customerdata_options_alter_customerdata_phone.py  0009_alter_product_price.py  0010_alter_product_category.py  0011_alter_product_options_product_published.py  0012_product_owner.py
catalog/templates/catalog/: add_product.html  base.html  catalog.html  category_list.html  contacts.html  footer.html  header.html  home.html  product_add.html  product_confirm_delete.html  product_detail.html  (+1 more)
config/: settings.py  urls.py
nginx/: nginx.conf
static/: style.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_country.py
(+5 files in other folders)
