[tool.poetry]
name = "koredjango"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.8"
mypy = "^1.19.0"
flake8 = "^7.3.0"
isort = "^7.0.0"
black = "^25.11.0"
python-dotenv = "^1.2.1"
psycopg2-binary = "^2.9.11"
pillow = "^12.0.0"
ipython = "^9.8.0"
redis = "^7.1.0"
django-redis = "^6.0.0"
gunicorn = "^25.1.0"
whitenoise = "^6.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = [
    'venv',
    'tests',
    ]

[tool.black]
line-length = 119
exclude = '''
    (
    /(
        \.git
    )/
)
'''

[tool.isort]
line_length = 119